--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@
                     <div id="series">
                         <div id="exprs">
                             <div v-for="comp in expressions">
-                                <expression :id="comp.id"></expression>
+                                <expression :id="comp.id" :ontd="td" :onlegend="enableLegend"></expression>
                             </div>
                         </div>
                         <div id="coords">
                             <div v-for="comp in coordinates">
-                                <coordinate :id="comp.id"></coordinate>
+                                <coordinate :id="comp.id" :ontd="td" :onlegend="enableLegend"></coordinate>
                             </div>
                         </div>
                         <div id="tables">
                             <div v-for="comp in tableps">
-                                <tablep :id="comp.id"></tablep>
+                                <tablep :id="comp.id" :ontd="td" :onlegend="enableLegend"></tablep>
                             </div>
                         </div>
-                        <div id="nodes">
+                        <div id="nodes" v-show="enablepin">
                             <div v-for="comp in nodeps">
                                 <node :id="comp.id"></node>
                             </div>
@@ -151,9 +151,9 @@
         <div v-show="enabled" class="seriesitem">
             <div><button class="deleteBut" @click="deleteComp">🗑</button></div>
             <div class="type">函数</div>
-            <div><input type="text" class="legend" placeholder="系列名" v-model="legend" @keyup="on_change" ></div>
+            <div v-show="onlegend"><input type="text" class="legend" placeholder="系列名" v-model="legend" @keyup="on_change" ></div>
             <!-- <br> -->
-            <div class="ttd">
+            <div class="ttd" v-show="ontd">
                 <input type="checkbox" @click="ontdchange" v-model="etd" title="三维坐标">
             </div>
             <div class="ptd">
@@ -173,9 +173,9 @@
         <div v-show="enabled" class="seriesitem">
             <div><button class="deleteBut" @click="deleteComp">🗑</button></div>
             <div class="type">坐标</div>
-            <div><input type="text" class="legend" placeholder="系列名" v-model="legend" @keyup="on_change"></div>
+            <div v-show="onlegend"><input type="text" class="legend" placeholder="系列名" v-model="legend" @keyup="on_change"></div>
             <!-- <br> -->
-            <div class="ttd">
+            <div class="ttd" v-show="ontd">
                 <input type="checkbox" @click="ontdchange" v-model="etd" title="三维坐标">
             </div>
             <div class="ptd">
@@ -193,9 +193,9 @@
         <div v-show="enabled" class="seriesitem">
             <div><button class="deleteBut" @click="deleteComp">🗑</button></div>
             <div class="type">文件</div>
-            <div><input type="text" class="legend" placeholder="系列名" v-model="legend" @keyup="on_change"></div>
+            <div v-show="onlegend"><input type="text" class="legend" placeholder="系列名" v-model="legend" @keyup="on_change"></div>
             <!-- <br> -->
-            <div class="ttd">
+            <div class="ttd" v-show="ontd">
                 <input type="checkbox" @click="ontdchange" v-model="etd" title="三维坐标">
             </div>
             <div class="ptd">
